# lime

./: .readthedocs.yaml  CITATION.cff  LICENSE.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
docs/: doc_snippets.txt  requirements.txt
docs/source/: conf.py  index.md  index.rst
examples/: LiMe Tutorial 1 - Basic Opertions.ipynb  LiMe Tutorial 2 - Fits configuration.ipynb  example10_check_redshift.py  example10_plotting_without_lime.py  example11_fitting_masked_arrays.py  example11_parse_measurements_log.py  example12_output_file_formats.py  example12_sample_class.py  example13_sample_indexing.py  example14_configuration_file.py  example1_simple_fit.py  example1_single_line_fit.py  example2_lines_inspection.py  example2_synthetic_spectrum_fit.py  example3_fit_with_external_files.py  example4_IFU_masking.py  example4_interactive_mask_plots.py  example5_IFU_Cube_Inspector.py  example5_IFU_Cube_masking.py  example5_IFU_fitting.py  example5_IFU_masking.py  example6_IFU_fitting.py  example6_IFU_results.py  example6_spatial_mask_generator.py  example7_IFU_results.py  example7_fitting_absorptions.py  example8_fitting_absorptions.py  example8_line_bands.py  example9_profile_fitting.py  example9_spectral_band_generator.py  fit_with_external_files.py  notebook1_SingleLineFitting.ipynb  notebook2_Line_bands_inspection.ipynb  notebook5_IFU_Line_Fitting.ipynb  notebook6_IFU_results.ipynb  synthetic_spectrum_fit.py  tests_mplcursor.py
examples/.ipynb_checkpoints/: notebook2_Line_bands_inspection-checkpoint.ipynb  notebook3_CompleteSpectrumFitting-checkpoint.ipynb  notebook4_IFU_Spatial_Masking-checkpoint.ipynb
examples/0_introduction/: 0_installation.rst  1_observations.ipynb  2_line_labels.ipynb  3_line_bands.ipynb  4_fitting_configuration.ipynb
examples/0_resources/: long_slit.toml  manga.toml
examples/1_guides/: 0_creating_observations.ipynb  1_continuum_fitting.ipynb  2_line_detection.ipynb  3_multifile-line.ipynb
examples/1_introduction/: 1_observations.ipynb  2_line_labels.ipynb  3_line_bands.ipynb  4_fitting_configuration.ipynb
examples/2_guides/: 0_creating_observations.ipynb  1_continuum_fitting.ipynb  2_line_detection.ipynb  3_multifile-line.ipynb
examples/5_tutorials/: 1_fit_line.py  1_line_profile_and_shape.py  1_lines_database.py  2_automatic_bands_determination.py  2_manual_adjut_lines.py  2_manual_bands_determination.py  3_complete_spectrum.py  4_IFU_spatial_masking.py  5_IFU_line_fitting.py  6_IFU_line_maps.py
examples/6_benchmark/: CGCG007_MASK_4_bands.txt  CGCG007_MASK_absorption_bands.txt
examples/benchmark/: CGCG007_MASK_0_bands.txt  CGCG007_MASK_1_bands.txt  accuracy_map.py  benchmark_results.py  benchmark_results.txt  muse.toml  muse_line_measuring.py
examples/benchmarks/: CGCG007_MASK_3_bands.txt  benchmark_results.py  benchmark_results.txt  muse.toml  muse_line_measuring.py
examples/guides/: 0_creating_observations.ipynb
examples/inputs/: inputs2_line_labels.py  inputs3_line_bands.py  inputs4_fit_configuration.py  n_inputs1_spectra.ipynb  n_inputs2_line_labels.ipynb  n_inputs3_line_bands.ipynb  n_inputs4_fit_configuration.ipynb
examples/outputs/: n_outputs2_plots.ipynb  outputs1_measurements.rst
examples/sample_data/: SHOC579_region0_maskLog.txt  SHOC579_region1_maskLog.txt  SHOC579_region2_maskLog.txt  abs_line_mask.txt  cfg.toml  config_file.cfg  example_configuration_file.cfg  gp121903_BR_mask.txt  gp121903_BR_mask_corrected.txt  gp121903_bands.txt  gtc_greenpeas_data.ini  linesLog.txt  long_slit.toml  manga.cfg  manga.toml  osiris.toml  osiris_conf.ini  osiris_mask.txt  profiling.py  sample_log.txt  star_spectrum.txt
examples/scripts/: 0_code_template.py  0_file_opening.py  0_opening_files.py  1_fit_line.py  1_line_profile_and_shape.py  1_lines_database.py  2_automatic_bands_determination.py  2_manual_bands_determination.py  3_complete_spectrum.py  3_complete_spectrum_SDSS.py  3_line_groups_prediction.py  3_multi_file_analysis.py  3a_SDSS_spectrum.py  4_IFU_spatial_masking.py  5_IFU_line_fitting.py  6_IFU_line_maps.py  7_spectra_resampling.py
examples/tutorials/: n_tutorial1_single_line_fit.ipynb  n_tutorial2_lines_inspection.ipynb  n_tutorial3_complete_spectrum.ipynb  n_tutorial4_IFU_masking.ipynb  n_tutorial5_IFU_fitting.ipynb  n_tutorial6_IFU_results.ipynb  tutorial0_generate_bands_table.py  tutorial10_2D_line_detections.py  tutorial12_automatic_band_classification.py  tutorial1_single_line_fit.py  tutorial2_lines_inspection.py  tutorial3_complete_spectrum.py  tutorial3_multiple_object_fitting.py  tutorial7_Sample.py  (+8 more)
tests/: check_saved_values.py  data_generator.py  test_astro.py  test_cube.py  test_io.py  test_line.py  test_model.py  test_plots.py  test_read_fits.py  test_redshift.py  test_resources.py  test_sample.py  test_spectrum.py  test_tables.py  test_tools.py
(+197 files in other folders)
