[project]
name = "lime-stable"
version = "1.0.7"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "COPYING"}
authors = [{name = "Vital Fernández", email = "vgf@umich.edu"}]
description = "Line measuring algorithm for astronomical spectra"

dependencies = ["asdf~=3.0",
                "astropy~=6.0",
                "joblib~=1.3",
                "lmfit~=1.2",
                "matplotlib~=3.7",
                "mplcursors~=0.5",
                "nbsphinx~=0.9",
                "numpy~=1.24",
                "openpyxl~=3.1",
                "pandas~=2.0",
                "PyLaTeX~=1.4",
                "pytest~=7.4",
                "pytest-cov~=4.1",
                "pytest-mpl~=0.16",
                "scipy~=1.10",
                "toml~=0.10",
                "tomli >= 2.0.0 ; python_version < '3.11'"]

classifiers = ["License :: OSI Approved :: MIT License",
               "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.7"]

[tool.pytest.ini_options]
pythonpath = ["src"]
mpl-baseline-path = 'tests/baseline'
mpl-results-path = 'tests/outputs'
mpl-results-always = false
