[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lime-stable"
version = "2.0.dev4"
readme = "README.rst"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{name = "Vital Fernández", email = "vgf@umich.edu"}]
description = "Line measuring algorithm for astronomical spectra"

dependencies = ["astropy~=7.0",
                "lmfit~=1.3",
                "matplotlib~=3.10",
                "numpy~=2.2",
                "pandas~=2.2",
                "scipy~=1.15",
                "aspect-stable~=0.3.1",
                "tomli >= 2.0.0 ; python_version < '3.11'"]

classifiers = ["Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.11"]

[project.optional-dependencies]
full = ["asdf~=4.1",
        "bokeh~=3.6",
        "mplcursors~=0.6",
        "openpyxl~=3.1",
        "PyLaTeX~=1.4",
        "toml~=0.10",]

docs = ["nbsphinx~=0.9",
        "ipympl~=0.9",
        "sphinx-rtd-theme~=3.0"]

tests = ["pytest~=8.3",
         "pytest-cov~=6.0",
         "pytest-mpl~=0.17"]

[tool.pytest.ini_options]
pythonpath = ["src"]
mpl-baseline-path = 'tests/baseline'
mpl-results-path = 'tests/outputs'
mpl-results-always = false
addopts = "-p no:asdf_schema_tester"
