[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lime-stable"
version = "2.0.5"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
               "Programming Language :: Python :: 3.11"]

authors = [{name = "Vital Fernández", email = "vgf@stsci.edu"}]
description = "Line measuring algorithm for astronomical spectra"

dependencies = ["astropy~=7.1",
                "lmfit~=1.3",
                "matplotlib~=3.10",
                "numpy~=2.3",
                "pandas~=2.2",
                "scipy~=1.16",
                "tomli >= 2.0.0 ; python_version < '3.11'"]

[project.optional-dependencies]
full = ["asdf~=4.1",
        "aspect-stable~=0.5.1",
        "bokeh~=3.8",
        "mplcursors~=0.6",
        "openpyxl~=3.1",
        "PyLaTeX~=1.4",
        "toml~=0.10",]

docs = ["sphinx-rtd-theme~=3.0",
        "sphinx_togglebutton~=0.3",
        "sphinx_book_theme~=1.1",
        "ipympl~=0.9",
        "myst-nb~=1.3"]

tests = ["pytest~=8.4",
         "pytest-cov~=7.0",
         "pytest-mpl~=0.17"]

[tool.pytest.ini_options]
pythonpath = ["src"]
mpl-baseline-path = 'tests/baseline'
mpl-results-path = 'tests/outputs'
mpl-results-always = false
markers = ["mpl: matplotlib image comparison tests"]
addopts = "-p no:asdf_schema_tester"
