[metadata]
name = lime-stable
version = 0.2.2
author = Vital Fernandez
author_email = vital.fernandez@userena.cl
description = Line measuring algorithm for ionized nebulae
long_description = file: README.rst
long_description_content_type=text/x-rst
url = https://github.com/Vital-Fernandez/lime
licence = GNU

[options]
package_dir=src
packages=find:

[options.packages.find]
where=src
